# liblambdah

./: .gitignore  CMakeLists.txt  Config.cmake.in  lambda.c  lambda.h
src/: CMakeLists.txt  lambda.c  lambda.h
