CMAKE_MINIMUM_REQUIRED(VERSION 4.0.0)
PROJECT(lambdah C)

SET(CMAKE_C_STANDARD 99)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
SET(CMAKE_C_FLAGS "-O0 -g -DDEBUG=1")

FIND_PACKAGE(JNI REQUIRED)
INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})

MESSAGE(STATUS "JNI include dirs: ${JNI_INCLUDE_DIRS}")

ADD_LIBRARY(lambdah SHARED lambda.c lambda.h)
